force-app/main/default/objects/Incentive_Snapshot__c/Incentive_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Incentive Snapshot</label>
    <nameField>
        <label>Incentive Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>