force-app/main/default/objects/Incentive_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incentive Snapshots</relationshipLabel>
    <relationshipName>Incentive_Snapshots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>