force-app/main/default/objects/Incentive_Snapshot__c/fields/Activity_Discount_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Activity_Discount_Achieved__c</fullName>
    <label>Activity Discount Achieved</label>
    <summarizedField>Incentive_Snapshot_Activity_Detail__c.Discount__c</summarizedField>
    <summaryForeignKey>Incentive_Snapshot_Activity_Detail__c.Incentive_Snapshot__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>