force-app/main/default/objects/Incentive_Snapshot__c/fields/Incentive_Contract__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Incentive Contract</label>
    <referenceTo>Incentive_Contract__c</referenceTo>
    <relationshipLabel>Incentive Snapshots</relationshipLabel>
    <relationshipName>Incentive_Snapshots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>