force-app/main/default/objects/Incentive_Snapshot__c/fields/InsertRef__c.field-meta.xml
<CustomField>
    <fullName>InsertRef__c</fullName>
    <externalId>true</externalId>
    <label>InsertRef</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>