force-app/main/default/objects/Incentive_Snapshot__c/fields/Parent_Seed_Discount_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Parent_Seed_Discount_Achieved__c</fullName>
    <label>Parent Seed Discount Achieved</label>
    <summarizedField>Incentive_Snapshot_Parent_Seed_Detail__c.Total_Discount__c</summarizedField>
    <summaryForeignKey>Incentive_Snapshot_Parent_Seed_Detail__c.Incentive_Snapshot__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>