force-app/main/default/objects/Incentive_Snapshot__c/fields/Parent_Seed_Totals__c.field-meta.xml
<CustomField>
    <fullName>Parent_Seed_Totals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Parent Seed Totals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>