force-app/main/default/objects/Incentive_Snapshot__c/fields/Unique_Varieties_Totals__c.field-meta.xml
<CustomField>
    <fullName>Unique_Varieties_Totals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unique Varieties Totals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>