force-app/main/default/objects/Incentive_Snapshot__c/fields/Unit_Totals__c.field-meta.xml
<CustomField>
    <fullName>Unit_Totals__c</fullName>
    <label>Unit Totals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>