force-app/main/default/objects/Incentive_Snapshot__c/fields/Volume_Discount_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Volume_Discount_Achieved__c</fullName>
    <label>Volume Discount Achieved</label>
    <summarizedField>Incentive_Snapshot_Volume_Detail__c.Total_Discount__c</summarizedField>
    <summaryForeignKey>Incentive_Snapshot_Volume_Detail__c.Incentive_Snapshot__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>