force-app/main/default/objects/Incentive_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Brand__c</columns>
    <columns>Season__c</columns>
    <columns>Incentive_Contract__c</columns>
    <columns>Parent_Seed_Discount_Achieved__c</columns>
    <columns>Volume_Discount_Achieved__c</columns>
    <columns>Activity_Discount_Achieved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>